# uibk-poc-datastructure-benchmark

./: .gitignore  ArrayBenchmark.cpp  ArrayBenchmark.h  ArrayBenchmark.hpp  Benchmark.cpp  Benchmark.h  Benchmark.hpp  BenchmarkBase.cpp  BenchmarkBase.h  BenchmarkBase.hpp  CMakeLists.txt  DataStructureBenchmark.cpp  DataStructureBenchmark.h  DataStructureBenchmark.hpp  Elements.h  LCC3Results.csv  ListBenchmark.cpp  ListBenchmark.h  ListBenchmark.hpp  ListRandomAccessBenchmark.cpp  README.md  TieredArrayBenchmark.cpp  TieredArrayBenchmark.hpp  UnrolledLinkedListBenchmark.cpp  UnrolledLinkedListBenchmark.hpp  generate_plots.py  run_benchmark.py
exercise12/: analysis_lcc3.txt  sheet_12_sol.md  sheet_12_solution.tex
exercise12/modified_src_files/: ldo.c  ldo.h  lvm.c
src/: Benchmark.hpp  DataStructureBenchmark.cpp  DataStructureBenchmark.hpp  Elements.hpp
src/Benchmarks/: ArrayBenchmark.cpp  ArrayBenchmark.hpp  ArrayRandomAccessBenchmark.hpp  ListBenchmark.cpp  TieredArrayBenchmark.hpp
src/Benchmarks/Array/: ArrayBenchmark.cpp  ArrayRandomAccessBenchmark.cpp  TieredArrayBenchmark.cpp  TieredArrayBenchmark.hpp  TieredArrayRandomBenchmark.cpp  TieredArrayRandomBenchmark.hpp
src/Benchmarks/List/: ListBenchmark.hpp  ListRandomAccessBenchmark.hpp  UnrolledLinkedListBenchmark.cpp  UnrolledLinkedListBenchmark.hpp  UnrolledLinkedListRandomBenchmark.cpp  UnrolledLinkedListRandomBenchmark.hpp
src/Types/: TieredArray.hpp  UnrolledLinkedList.hpp
